@@ -15,7 +15,7 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 
 	private JPanel jp;
 
-	private JLabel curBowler, foul, pinsDown;
+	private JLabel curBowler, pinsDown;
 	private JButton viewLane;
 	private JButton viewPinSetter, maintenance;
 
@@ -24,7 +24,7 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 	private Lane lane;
 	int laneNum;
 
-	boolean laneShowing;
+	private boolean laneShowing;
 	boolean psShowing;
 
 	public LaneStatusView(Lane lane, int laneNum ) {
@@ -47,8 +47,8 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 		jp.setLayout(new FlowLayout());
 		JLabel cLabel = new JLabel( "Now Bowling: " );
 		curBowler = new JLabel( "(no one)" );
-		JLabel fLabel = new JLabel( "Foul: " );
-		foul = new JLabel( " " );
+//		JLabel fLabel = new JLabel( "Foul: " );
+//		JLabel foul = new JLabel( " " );
 		JLabel pdLabel = new JLabel( "Pins Down: " );
 		pinsDown = new JLabel( "0" );
 
@@ -56,7 +56,7 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 		JPanel buttonPanel = new JPanel();
 		buttonPanel.setLayout(new FlowLayout());
 
-		Insets buttonMargin = new Insets(4, 4, 4, 4);
+
 
 		viewLane = new JButton("View Lane");
 		JPanel viewLanePanel = new JPanel();
@@ -87,8 +87,7 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 
 		jp.add( cLabel );
 		jp.add( curBowler );
-//		jp.add( fLabel );
-//		jp.add( foul );
+
 		jp.add( pdLabel );
 		jp.add( pinsDown );
 		
@@ -103,10 +102,10 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 	public void actionPerformed( ActionEvent e ) {
 		if ( lane.isPartyAssigned() ) { 
 			if (e.getSource().equals(viewPinSetter)) {
-				if ( psShowing == false ) {
+				if ( !psShowing) {
 					psv.show();
 					psShowing=true;
-				} else if ( psShowing == true ) {
+				} else  {
 					psv.hide();
 					psShowing=false;
 				}
@@ -114,29 +113,28 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 		}
 		if (e.getSource().equals(viewLane)) {
 			if ( lane.isPartyAssigned() ) { 
-				if ( laneShowing == false ) {
+				if ( !laneShowing ) {
 					lv.show();
 					laneShowing=true;
-				} else if ( laneShowing == true ) {
+				} else  {
 					lv.hide();
 					laneShowing=false;
 				}
 			}
 		}
-		if (e.getSource().equals(maintenance)) {
-			if ( lane.isPartyAssigned() ) {
+		if (e.getSource().equals(maintenance) && lane.isPartyAssigned()) {
 				lane.unPauseGame();
 				maintenance.setBackground( Color.GREEN );
-			}
+
 		}
 	}
 
 	public void receiveLaneEvent(LaneEvent le) {
-		curBowler.setText( ( (Bowler)le.getBowler()).getNickName() );
+		curBowler.setText( ( le.getBowler()).getNickName() );
 		if ( le.isMechanicalProblem() ) {
 			maintenance.setBackground( Color.RED );
 		}	
-		if ( lane.isPartyAssigned() == false ) {
+		if ( !lane.isPartyAssigned() ) {
 			viewLane.setEnabled( false );
 			viewPinSetter.setEnabled( false );
 		} else {
@@ -146,9 +144,8 @@ public class LaneStatusView implements ActionListener, LaneObserver, PinsetterOb
 	}
 
 	public void receivePinsetterEvent(PinsetterEvent pe) {
-		pinsDown.setText( ( new Integer(pe.totalPinsDown()) ).toString() );
-//		foul.setText( ( new Boolean(pe.isFoulCommited()) ).toString() );
-		
+		pinsDown.setText( (Integer.valueOf(pe.totalPinsDown()) ).toString() );
+
 	}
 
 }
